fix(blog): adjust link alignment in BlogAuthor component for better mobile layout

--- a/packages/web-qwik/src/components/blog/blog-author.module.scss
+++ b/packages/web-qwik/src/components/blog/blog-author.module.scss
@@ -49,7 +49,7 @@
   grid-area: links;
 
   @media (width < 512px) {
-    justify-content: center;
+    justify-content: flex-start;
   }
 }
 
